--- a/stylesheets/_component.range-slider.scss
+++ b/stylesheets/_component.range-slider.scss
@@ -118,4 +118,8 @@
     &::-moz-focus-outer {
         border: 0;
     }
+
+    &:focus {
+        box-shadow: 0 0 0 2px white, 0 0 2px 5px highlight;
+    }
 }
