Change active tab

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -25,7 +25,8 @@
         {
           "id"    : "buttongroup",
           "label" : "Button Group",
-          "src"   : tab_buttongroup
+          "src"   : tab_buttongroup,
+          "active": true
         },
         {
           "id"    : "checkbox",
@@ -75,8 +76,7 @@
         {
           "id"    : "range",
           "label" : "Range",
-          "src"   : tab_range,
-          "active": true
+          "src"   : tab_range
         },
         {
           "id"    : "radio",
