Exclude Label of nav-item for W3C Validation
Based on the error report generated by the command ‘grunt validate’.

--- a/views/pulsar/v2/helpers/nav.html.twig
+++ b/views/pulsar/v2/helpers/nav.html.twig
@@ -110,7 +110,7 @@
     <li
         {{
             attributes(options
-                |exclude('data-toggle href icon')
+                |exclude('data-toggle href icon label')
                 |defaults({ 'class': 'nav-item t-nav-item' })
             )
         }}
