Remove Lexicon Exclusive Styles for Responsive Tab
Based on the error report generated by the command ‘grunt validate’.

--- a/views/lexicon/utilities/responsive.html.twig
+++ b/views/lexicon/utilities/responsive.html.twig
@@ -1,20 +1,8 @@
 {% extends '@pulsar/pulsar/components/tab.html.twig' %}
 
 {% block tab_content %}
-<style type="text/css">
-    .wrapper {
-        padding: 20px;
-    }
 
-    .item {
-        background-color: green;
-        color: white;
-        margin: 10px 0;
-        padding: 10px;
-    }
-</style>
-
-<div class="wrapper">
+<div class="example wrapper">
 
     <div class="item u-visible-on-phone">
         1. Visible on mobile, hidden on tablet and desktop
