Remove ‘px’ from img Width Syntax for W3C Validation
This is a HTML5 restriction based on the error report generated by the command ‘grunt validate’.

--- a/views/lexicon/forms/select2.html.twig
+++ b/views/lexicon/forms/select2.html.twig
@@ -1239,7 +1239,7 @@
 
 {% block tab_sidebar %}
     <a href="https://jadu.gitbooks.io/pulsar/content/Select.html">
-        <img src="../../../images/cover.png" alt="Pulsar documentation front cover" width="157px" />
+        <img src="../../../images/cover.png" alt="Pulsar documentation front cover" width="157" />
     </a>
     <br />
     {{
