--- a/views/lexicon/forms/textarea.html.twig
+++ b/views/lexicon/forms/textarea.html.twig
@@ -350,7 +350,7 @@
 
 {% block tab_sidebar %}
     <a href="https://jadu.gitbooks.io/pulsar/content/text.html">
-        <img src="../../../images/cover.png" alt="Pulsar documentation front cover" width="157px" />
+        <img src="../../../images/cover.png" alt="Pulsar documentation front cover" width="157" />
     </a>
     <br />
     {{
