--- a/stylesheets/pulsar.scss
+++ b/stylesheets/pulsar.scss
@@ -111,6 +111,7 @@ $fa-css-prefix: 'icon';
 @import 'component.icons';
 @import 'component.input-groups';
 @import 'component.labels';
+@import 'component.lexicon';
 @import 'component.lists';
 @import 'component.loading';
 @import 'component.login';
