Add Alt Text to Images for W3C Validation

--- a/views/lexicon/tabs/popovers.html.twig
+++ b/views/lexicon/tabs/popovers.html.twig
@@ -48,7 +48,7 @@
           <div class="arrow"></div>
           <h3 class="popover-title">Scrolling popover</h3>
           <div class="popover-content">
-            <img src="http://media.indiedb.com/images/games/1/10/9018/61708.gif" />
+            <img src="http://media.indiedb.com/images/games/1/10/9018/61708.gif" alt="Alternative Text" />
           </div>
           <div class="popover-footer">
             {{ html.button({ 'label': html.icon('thumbs-up-alt') ~ ' Longcat is Long ' }) }}
