--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -73,7 +73,7 @@
         <div class="modal__content">
             <div class="modal__header">
                 <div class="modal__header-detailed">
-                    <img src="http://www.placecage.com/g/70/70" class="modal__avatar" />
+                    <img src="http://www.placecage.com/g/70/70" alt="Modal Avatar" class="modal__avatar" />
                     <h4 class="modal__title">some_image.png</h4>
                     <p class="modal__title-meta">Posted by James Jacobs - Today at 8:38am in GWS0000001</p>
                 </div>
