--- a/views/lexicon/html/badges.html.twig
+++ b/views/lexicon/html/badges.html.twig
@@ -1,16 +1,10 @@
 {% extends '@pulsar/pulsar/components/tab.html.twig' %}
 
 {% block tab_content %}
-    <style>
-        .table td.cell--inverse,
-        .table td.cell--inverse:hover {
-            background-color: #2d86b3 !important;
-        }
-    </style>
 
     <h2>Badges</h2>
 
-    <table class="table">
+    <table class=" exmple table">
         <thead>
             <tr>
                 <td></td>
