--- a/views/lexicon/forms/toggle-switch.html.twig
+++ b/views/lexicon/forms/toggle-switch.html.twig
@@ -24,8 +24,7 @@
     {{
         form.toggle_switch({
             'id': 'toggle-3',
-            'label': 'Toggle switch with help',
-            'help': 'Help text to give more information about expected input'
+            'label': 'Toggle switch with help'
         })
     }}
 
@@ -61,7 +60,6 @@
         form.toggle_switch({
             'id': 'toggle-6',
             'label': 'Toggle switch with a longer than expected label which will probably wrap multple lines and push the following input onto the next baseline',
-            'help': 'Example block-level help text here',
             'guidance': 'Help text to give more information about expected input'
         })
     }}
@@ -88,8 +86,7 @@
         form.toggle_switch({
             'id': 'toggle-9',
             'label': 'Text field with error and help',
-            'error': 'Please complete this field',
-            'help': 'Help text to give more information about expected input'
+            'error': 'Please complete this field'
         })
     }}
 
@@ -97,8 +94,7 @@
         form.toggle_switch({
             'id': 'toggle-10',
             'class': 'has-error',
-            'label': 'Text field error with help only',
-            'help': 'Help text to give more information about expected input'
+            'label': 'Text field error with help only'
         })
     }}
 
@@ -109,16 +105,14 @@
         form.toggle_switch({
             'id': 'toggle-11',
             'label': '"class": "has-changed"',
-            'class': 'has-changed',
-            'help': 'Highlight whether an action elsewhere affects an input'
+            'class': 'has-changed'
         })
     }}
     {{
         form.toggle_switch({
             'id': 'toggle-12',
             'label': '"class": "has-success"',
-            'class': 'has-success',
-            'help': 'Something good happened'
+            'class': 'has-success'
         })
     }}
 
@@ -126,24 +120,21 @@
         form.toggle_switch({
             'id': 'toggle-13',
             'label': '"class": "has-warning"',
-            'class': 'has-warning',
-            'help': 'Something bad happened'
+            'class': 'has-warning'
         })
     }}
     {{
         form.toggle_switch({
             'id': 'toggle-14',
             'label': '"class": "has-error"',
-            'class': 'has-error',
-            'help': 'Automatically added if using <code>error</code> option'
+            'class': 'has-error'
         })
     }}
     {{
         form.toggle_switch({
             'id': 'toggle-15',
             'label': '"disabled": true',
-            'disabled': true,
-            'help': 'Stop! Can’t touch this'
+            'disabled': true
         })
     }}
 
