Remove Unecessary Aria-labelby for W3C Validation

--- a/views/lexicon/tabs/modals.html.twig
+++ b/views/lexicon/tabs/modals.html.twig
@@ -40,7 +40,7 @@
 
 <p><a data-toggle="modal" href="#myModal" class="btn">Launch Standard Modal</a></p>
 
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
@@ -68,7 +68,7 @@
 
 <p><a data-toggle="modal" href="#myFullScreenModal" class="btn">Launch Full Screen Modal</a></p>
 
-<div class="modal modal--full-screen fade" id="myFullScreenModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal modal--full-screen fade" id="myFullScreenModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal__dialog">
         <div class="modal__content">
             <div class="modal__header">
