--- a/views/lexicon/tabs/message.html.twig
+++ b/views/lexicon/tabs/message.html.twig
@@ -6,13 +6,13 @@
 
 <div class="tab__inner tab--padded">
     <div class="message">
-        <time class="message__time">16:32 <small>(2 days ago)</small></time>
+        <div class="message__time"><time>16:32</time> <small>(2 days ago)</small></div>
         <span class="message__sender">Paul Stanton</span>
         <span class="message__recipient">to Customer, Support</span>
         <div class="message__body">rah rah rah</div>
     </div>
     <div class="message">
-        <time class="message__time">16:32 <small>(2 days ago)</small></time>
+        <div class="message__time"><time>16:32</time> <small>(2 days ago)</small></div>
         <span class="message__sender">Paul Stanton</span>
         <span class="message__recipient">to Customer, Support</span>
         <div class="message__body">
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="message">
-        <time class="message__time">16:32 <small>(2 days ago)</small></time>
+        <div class="message__time"><time>16:32</time> <small>(2 days ago)</small></div>
         <span class="message__sender">Paul Stanton</span>
         <span class="message__recipient">to Customer, Support</span>
         <div class="message__body">rah rah rah</div>
