Add H4 in Section for W3C Validation

--- a/views/lexicon/patterns/masterswitch/masterswitch.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch.html.twig
@@ -19,7 +19,7 @@
 
         <section class="masterswitch-content is-disabled">
 
-            <p>This content should be disabled until the masterswitch is turned on.</p>
+            <h4>This content should be disabled until the masterswitch is turned on.</h4>
 
             {{
                 form.text({
