--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
@@ -20,7 +20,7 @@
 
         <section class="masterswitch-content is-disabled">
 
-            <p>This content should be disabled until the masterswitch is turned on.</p>
+            <h4>This content should be disabled until the masterswitch is turned on.</h4>
 
             {{
                 form.text({
