Add actions option to panel helper
Adds new options:

Option  | Type   | Description
------- | ------ | --------------------------------------------------------------
actions | array  | An array of `html.button` options to be displayed within the panel
actions_position | string | Position of the actions, `left` (default), `inline`, `center`, `right`

Example:

```
{{
    html.panel({
        'title': 'Hello',
        'body': 'You need to do a thing.',
        'actions': [
            {
                'label': 'Don’t Do the Thing',
                'class': '.btn--outline .btn--small .btn--inverse'
            },
            {
                'label': 'Do the Thing',
                'class': '.btn--outline .btn--small .btn--inverse'
            }
        ]
    })
}}
```

Closes #645

--- a/views/lexicon/tabs/panels.html.twig
+++ b/views/lexicon/tabs/panels.html.twig
@@ -5,23 +5,6 @@
 
 {% block tab_content %}
 
-{{
-    html.panel({
-        'title': 'Hello',
-        'icon': 'info-sign',
-        'body': 'You need to do a thing. ' ~
-                html.button({
-                    'label': 'Don’t Do The Thing',
-                    'class': 'btn--outline btn--small btn--inverse'
-                }) ~ '&nbsp;' ~
-                html.button({
-                    'label': 'Do The Thing',
-                    'class': 'btn--outline btn--small btn--inverse'
-                })
-
-    })
-}}
-
     {{
         html.panel({
             'title': 'Default panel',
@@ -106,6 +89,85 @@
     Trying to do what I did
     Mama-unh mama-unh mama come closer
     In the middle of the club with the rub-a-dub, unh <a href="#" class="btn btn--outline btn--small btn--inverse">Call to Action</a>'
+        })
+    }}
+
+    {{
+        html.panel({
+            'title': 'Default (left) placement',
+            'icon': 'info-sign',
+            'body': 'You need to do a thing.',
+            'actions': [
+                {
+                    'label': 'Don’t Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                },
+                {
+                    'label': 'Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                }
+            ]
+
+        })
+    }}
+
+    {{
+        html.panel({
+            'title': 'inline',
+            'icon': 'info-sign',
+            'body': 'You need to do a thing.',
+            'actions_placement': 'inline',
+            'actions': [
+                {
+                    'label': 'Don’t Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                },
+                {
+                    'label': 'Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                }
+            ]
+
+        })
+    }}
+
+    {{
+        html.panel({
+            'title': 'center',
+            'icon': 'info-sign',
+            'body': 'You need to do a thing.',
+            'actions_placement': 'center',
+            'actions': [
+                {
+                    'label': 'Don’t Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                },
+                {
+                    'label': 'Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                }
+            ]
+
+        })
+    }}
+
+    {{
+        html.panel({
+            'title': 'right',
+            'icon': 'info-sign',
+            'body': 'You need to do a thing.',
+            'actions_placement': 'right',
+            'actions': [
+                {
+                    'label': 'Don’t Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                },
+                {
+                    'label': 'Do The Thing',
+                    'class': 'btn--outline btn--small btn--inverse'
+                }
+            ]
+
         })
     }}
 
