--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -22,7 +22,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/styles.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/pulsar.css">
+  <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/pulsar.css"> -->
   <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
 
   <!-- Icons -->
