--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -63,10 +63,16 @@ $fa-css-prefix: 'icon';
     @import '../../stylesheets/_structure.forms';
 
     // Components
+    @import '../../stylesheets/_component.badges';
+    @import '../../stylesheets/_component.block-list';
     @import '../../stylesheets/_component.buttons';
+    @import '../../stylesheets/_component.button-groups';
+    @import '../../stylesheets/_component.dropdowns';
+    @import '../../stylesheets/_component.flash';
     @import '../../stylesheets/_component.forms';
     @import '../../stylesheets/_component.icons';
     @import '../../stylesheets/_component.panels';
+    @import '../../stylesheets/_component.progress-bars';
     @import '../../stylesheets/_component.remove-button';
     @import '../../stylesheets/_component.rules';
     @import '../../stylesheets/_component.select2';
@@ -83,14 +89,35 @@ $fa-css-prefix: 'icon';
     @import '../../stylesheets/_utility.states';
 }
 
-
 .pulsar-example {
-    border: 1px solid #ccc;
+    border: 1px solid #e5e5e5;
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
+    display: table;
     font-family: 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     font-size: .8rem;
     margin-bottom: 1rem;
     padding: 1rem;
+    width: 100%;
+
+    p:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.panel {
+    background-color: lighten(#c84d40, 30);
+    border-left: 4px solid #c84d40;
+    font-size: .8rem;
+    margin-bottom: 1rem;
+    padding: .5rem;
+
+    .panel__title {
+        font-size: 1.2rem;
+    }
+
+    p:last-child {
+        margin-bottom: 0;
+    }
 }
 
