Restore Help Settings

--- a/views/lexicon/forms/checkbox.html.twig
+++ b/views/lexicon/forms/checkbox.html.twig
@@ -67,6 +67,7 @@
         form.checkbox_inline({
             'id': 'checkbox-7',
             'label': 'Checkbox inline plus extras',
+            'help': 'Help text to give more information about expected input',
             'guidance': 'Help text to give more information about expected input',
             'required': true
         })
@@ -85,6 +86,7 @@
             'id': 'checkbox-9',
             'label': 'Checkbox inline, indented plus extras',
             'class': 'form__group--indent form__group--full',
+            'help': 'Help text to give more information about expected input',
             'guidance': 'Help text to give more information about expected input',
             'required': true
         })
