--- a/views/lexicon/forms/radio.html.twig
+++ b/views/lexicon/forms/radio.html.twig
@@ -66,6 +66,7 @@
         form.radio_inline({
             'id': 'radio-7',
             'label': 'Radio inline plus extras',
+            'help': 'Help text to give more information about expected input',
             'guidance': 'Help text to give more information about expected input',
             'required': true
         })
@@ -84,6 +85,7 @@
             'id': 'radio-9',
             'label': 'Radio inline, indented plus extras',
             'class': 'form__group--indent form__group--full',
+            'help': 'Help text to give more information about expected input',
             'guidance': 'Help text to give more information about expected input',
             'required': true
         })
