Revert "Remove Placeholder from Colour Selection"
This reverts commit 4d99f26b2c364616353143c9c1010ff7a4a9be10.

--- a/views/lexicon/patterns/filters/create-filter.html.twig
+++ b/views/lexicon/patterns/filters/create-filter.html.twig
@@ -37,6 +37,7 @@
                         'label': 'Colour',
                         'id': 'colour',
                         'multiple': true,
+                        'placeholder': 'Choose one or more',
                         'options': {
                             'colour_red': 'Red',
                             'colour_blue': 'Blue'
