--- a/views/lexicon/patterns/filters/load-filter.html.twig
+++ b/views/lexicon/patterns/filters/load-filter.html.twig
@@ -37,6 +37,7 @@
                         'label': 'Colour',
                         'id': 'colour',
                         'multiple': true,
+                        'placeholder': 'Choose one or more',
                         'selected': 'colour_blue',
                         'options': {
                             'colour_red': 'Red',
