--- a/views/playground/integrations/singlepoint_six.html.twig
+++ b/views/playground/integrations/singlepoint_six.html.twig
@@ -167,6 +167,7 @@
                                                             'label': 'Available adapters',
                                                             'id': 'adapters',
                                                             'multiple': true,
+                                                            'help': 'Choose one or more',
                                                             'options': {
                                                                 '': 'Choose',
                                                                 'colour_red': 'Red',
